--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Weitong Li"
-  avatar           : "500X300.png"
+  avatar           : "profile.png"
   bio              : "Virginia Tech"
   location         : "Blacksburg, VA"
   employer         :
